Avoid PID permissions error on startup